syntax = "proto3";

import "amadeus-go/api/amadeus/type/amadeus.type.proto";

package amadeus.func;

service AmadeusService {
    // I know where I want to fly, the dates and duration, what are the best flight deals?
    rpc FlightLowFareSearch (FlightLowFareSearchRequest) returns (amadeus.type.Response);

    // Where can I fly from/to Delhi in the next months for $400?
    rpc FlightInspirationSearch (FlightInspirationSearchRequest) returns (amadeus.type.Response);

    // When is the cheapest date to fly to San Francisco from Miami?
    rpc FlightCheapestDateSearch (FlightCheapestDateSearchRequest) returns (amadeus.type.Response);

    // Which were the most searched destinations from Nice in June 2017?
    rpc FlightMostSearchedDestinations (FlightMostSearchedDestinationsRequest) returns (amadeus.type.Response);

    // What is the URL to my online check-in?
    rpc FlightCheckInLinks (FlightCheckInLinksRequest) returns (amadeus.type.Response);

    // Which were the most searched destinations from Nice in June 2017?
    rpc FlightMostSearchedByDestination (FlightMostSearchedByDestinationRequest) returns (amadeus.type.Response);

    // Where were people flying to the most from London in September 2017?
    rpc FlightMostTraveledDestinations (FlightMostTraveledDestinationsRequest) returns (amadeus.type.Response);

    // Where were the most number of bookings made to from Bangalore last November?
    rpc FlightMostBookedDestinations (FlightMostBookedDestinationsRequest) returns (amadeus.type.Response);

    // What was the busiest travel period for New York, based on either arrivals or departures?
    rpc FlightBusiestTravelingPeriod (FlightBusiestTravelingPeriodRequest) returns (amadeus.type.Response);

    // What relevant airports are there around a specific location?
    rpc AirportNearestRelevant (AirportNearestRelevantRequest) returns (amadeus.type.Response);

    // Which cities and/or airports start with ‘PA’ characters?
    rpc AirportAndCitySearch (AirportAndCitySearchRequest) returns (amadeus.type.Response);

    // Which airline has IATA code BA?
    rpc AirlineCodeLookup (AirlineCodeLookupRequest) returns (amadeus.type.Response);

}

// msgCode: 0001
// => amadeus.type.Response (0050)
// example: ?origin=PAR&destination=LON&departureDate=2018-09-25&returnDate=2018-09-28
message FlightLowFareSearchRequest {
    // required
    string origin = 1; // city/airport IATA code
    string destination = 2; // city/airport IATA code
    string departureDate = 3; // ISO 8601 YYYY-MM-DD

    // optional
    string returnDate = 4; // ISO 8601 YYYY-MM-DD
    string arrivalBy = 5; // ISO 8601 YYYY-MM-ddThh:mm
    string returnBy = 6; // ISO 8601 YYYY-MM-ddThh:mm
    int32 adults = 7; // age 12 or older
    int32 children = 8; // age 2 to 12
    int32 infants = 9; // age under 2
    int32 seniors = 10; // age 65 or older
    amadeus.type.TravelClass travelClass = 11;
    string includeAirlines = 12; // comma-separated IATA airline codes
    string excludeAirlines = 13; // comma-separated IATA airline codes
    bool nonStop = 14; // false by default
    string currency = 15; // ISO 4217 format, e.g. EUR for Euro
    int64 maxPrice = 16; // positive number with no decimals (EUR by default)
    int32 max = 17; // maximum result between 1 and 250 (50 by default)
}

// msgCode: 0002
// => amadeus.type.Response (0050)
// example: ?origin=DEL&maxPrice=400
message FlightInspirationSearchRequest {
    // required
    string origin = 1;

    // optional
    string departureDate = 2; // e.g. 2017-12-25
    bool oneWay = 3; // default: false
    // don't set duration if oneWay == true. range: eg 2,8. between: 1-15
    string duration = 4;
    bool nonStop = 5; // default: false
    int64 maxPrice = 6;
    string currency = 7; // eg EUR
}

// msgCode: 0003
// => amadeus.type.Response (0050)
// example: ?origin=MIA&destination=SFO
message FlightCheapestDateSearchRequest {
    // required
    string origin = 1;
    string destination = 2;

    // optional
    string departureDate = 3;
    bool oneWay = 4;
    string duration = 5; // same as inspiration-search
    bool nonStop = 6;
    int64 maxPrice = 7;
    string currency = 8;
    amadeus.type.ViewBy viewBy = 9;
}

// msgCode: 0004
// => amadeus.type.Response (0050)
// example: ?airlineCode=BA
message FlightCheckInLinksRequest {
    string airlineCode = 1;
}

// msgCode: 0005
// => amadeus.type.Response (0050)
// example: ?originCityCode=MAD&searchPeriod=2017-08&marketCountryCode=ES
message FlightMostSearchedDestinationsRequest {
    // required
    string originCityCode = 1;
    string searchPeriod = 2;
    string marketCountryCode = 3;

    // optional
    int32 max = 4; // between 10-50
    // list of attributes desired in the response or list of
    // attributes to remove from the response (with "-" before fields)
    string fields = 5; // absolute path; comma-separated
    int32 pageLimit = 6; // default: 10
    int32 pageOffset = 7; // default: 0
}

// msgCode: 0006
// => amadeus.type.Response (0050)
// example: ?originCityCode=LON&period=2017-09
message FlightMostTraveledDestinationsRequest {
    // required
    string originCityCode = 1;
    string period = 2; // e.g. 2015-05; valid from date 2011-01

    // optional
    int32 max = 3; // between 10-50
    string fields = 4; // comma-separated
    int32 pageLimit = 5;
    int32 pageOffset = 6;
    amadeus.type.Sort sort = 7; // default: TRAVELERS
}

// msgCode: 0007
// => amadeus.type.Response (0050)
// example: ?originCityCode=BLR&period=2017-11
message FlightMostBookedDestinationsRequest {
    // required
    string originCityCode = 1;
    string period = 2;

    // optional
    int32 max = 3; // between 10-50
    string fields = 4; // comma-separated
    int32 pageLimit = 5;
    int32 pageOffset = 6;
    amadeus.type.Sort sort = 7; // default: TRAVELERS
}

// msgCode: 0008
// => amadeus.type.Response (0050)
// example: ?cityCode=NYC&period=2017&direction=ARRIVING
message FlightBusiestTravelingPeriodRequest {
    string cityCode = 1; // IATA standard
    string period = 2; // ISO 8601
    amadeus.type.Direction direction = 3;
}

// msgCode: 0009
// => amadeus.type.Response (0050)
// example: ?latitude=49.0000&longitude=2.55&sort=relevance
message AirportNearestRelevantRequest {
    float latitude = 1;
    float longitude = 2;
    string sort = 3;
}

// msgCode: 0010
// => amadeus.type.Response (0050)
// example: ?subType=AIRPORT,CITY&keyword=PAR&countryCode=FR
message AirportAndCitySearchRequest {
    string subType = 1;
    string keyword = 2;
    string countryCode = 3;
}

// msgCode: 0011
// => amadeus.type.Response (0050)
// example: ?airlineCodes=BA
message AirlineCodeLookupRequest {
    string airlineCodes = 1; // comma-separated
}

// msgCode: 0013
// => amadeus.type.Response (0050)
// example: ?originCityCode=MAD&destinationCityCode=NYC&searchPeriod=2017-09&marketCountryCode=ES
message FlightMostSearchedByDestinationRequest {
    // required
    string originCityCode = 1;
    string destinationCityCode = 2;
    string searchPeriod = 3; // e.g. 2015-05; valid from date 2011-01
    string marketCountryCode = 4;

    // optional
    string fields = 5; // comma-separated
}

